[tool.poetry]
name = "yscreener"
version = "0.1.0"
description = "Yahoo finance screener Python client"
authors = ["th yoo <taihyungyoo@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/th-yoo/yscreener"
keywords = []

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.11.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
